[chromium] REGRESSION(109469): WebGL printing busted https://bugs.webkit.org/show_bug.cgi?id=80450

Reviewed by Kenneth Russell.

Avoid marking layers as needing display in setContentsTo...() since this breaks WebGL's damage tracking and is
unnecessary.

Tested WebGL printing manually.

* platform/graphics/chromium/GraphicsLayerChromium.cpp:
(WebCore::GraphicsLayerChromium::setContentsToCanvas):
(WebCore::GraphicsLayerChromium::setContentsToMedia):

Canonical link: https://commits.webkit.org/97607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109982 268f45cc-cd09-0410-ab3c-d52691b4dbfc